# ComfyUI-PyramidFlowWrapper

./: README.md  fp8_optimization.py  latent_preview.py  nodes.py  pyproject.toml  requirements.txt
configs/: causal_video_vae_config.json  miniflux_transformer_config.json  mmdit_transformer_config.json
diffusion_schedulers/: scheduling_flow_matching.py
examples/: pyramid_flow_miniflux_768_img2vid_example_01.json  pyramid_flow_miniflux_img2vid_example_01.json  pyramid_flow_miniflux_text2vid_example_01.json  pyramidflow_image2vid_example_01.json  pyramidflow_img2vid.json  pyramidflow_miniflux_example_01.json  pyramidflow_text2vid_example_01.json  pyramidflow_text2video_multipleprompts_example_01.json  text2vid_example_20GB.json
pyramid_dit/: __init__.py  modeling_mmdit_block.py  modeling_pyramid_mmdit.py  pyramid_dit_for_video_gen_pipeline.py
pyramid_dit/flux_modules/: __init__.py  modeling_flux_block.py  modeling_normalization.py  modeling_pyramid_flux.py  modeling_text_encoder.py
pyramid_dit/mmdit_modules/: __init__.py  modeling_mmdit_block.py  modeling_normalization.py  modeling_pyramid_mmdit.py
trainer_misc/: communicate.py  sp_utils.py  utils.py
video_vae/: context_parallel_ops.py  modeling_block.py  modeling_causal_conv.py  modeling_causal_vae.py  modeling_discriminator.py  modeling_enc_dec.py  modeling_loss.py
