[project]
name = "comfyui-pyramidflowwrapper"
description = "Wrapper for PyramidFlow -models: [a/https://github.com/jy0205/Pyramid-Flow](https://github.com/jy0205/Pyramid-Flow)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.30.1", "accelerate>=0.30.0", "einops", "packaging", "sentencepiece", "timm>=0.6.12", "numpy<=1.26.4", "protobuf>=4.25.4"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-PyramidFlowWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PyramidFlowWrapper"
Icon = ""
